[gd_scene load_steps=9 format=2]

[ext_resource path="res://Market/Player_list.gd" type="Script" id=1]
[ext_resource path="res://fonts/Graduate-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Market/Pannel.tscn" type="PackedScene" id=3]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.560784, 0.658824, 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[node name="Market" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.33484
margin_top = -1.1225
margin_right = -1.33484
margin_bottom = -1.1225
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer2" type="ScrollContainer" parent="Panel"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1250.0
margin_bottom = 638.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListArea" type="VBoxContainer" parent="Panel/ScrollContainer2"]
margin_right = 4344.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavBar" type="HBoxContainer" parent="Panel/ScrollContainer2/ListArea"]
margin_right = 4344.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Name"

[node name="position" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 204.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 0 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Position"

[node name="foot" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 278.0
margin_right = 338.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Foot"

[node name="league" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 342.0
margin_right = 412.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 0 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "League"

[node name="price" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 416.0
margin_right = 536.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 0 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Price"

[node name="age" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 540.0
margin_right = 655.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Age"

[node name="height" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 659.0
margin_right = 774.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Height"

[node name="overall" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 778.0
margin_right = 893.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Overall"

[node name="crossing" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 897.0
margin_right = 1012.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Crossing"

[node name="finishing" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1016.0
margin_right = 1131.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Finishing"

[node name="short_passing" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1135.0
margin_right = 1250.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Short passing"

[node name="volleys" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1254.0
margin_right = 1369.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Volleys"

[node name="dribbling" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1373.0
margin_right = 1488.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Dribbling"

[node name="curve" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1492.0
margin_right = 1607.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Curve"

[node name="long_passing" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1611.0
margin_right = 1726.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Long passing"

[node name="ball_control" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1730.0
margin_right = 1845.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Ball control"

[node name="acceleration" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1849.0
margin_right = 1964.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Acceleration"

[node name="sprint_speed" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1968.0
margin_right = 2083.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Sprint speed"

[node name="agility" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2087.0
margin_right = 2202.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Agility"

[node name="reactions" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2206.0
margin_right = 2321.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Reactions"

[node name="balance" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2325.0
margin_right = 2440.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Balance"

[node name="shot_power" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2444.0
margin_right = 2559.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Shot power"

[node name="strength" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2563.0
margin_right = 2678.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Strength"

[node name="long_shots" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2682.0
margin_right = 2797.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Long shots"

[node name="aggression" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2801.0
margin_right = 2916.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Aggression"

[node name="interceptions" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2920.0
margin_right = 3035.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Interceptions"

[node name="positioning" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3039.0
margin_right = 3154.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Positioning"

[node name="vision" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3158.0
margin_right = 3273.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Vision"

[node name="penalties" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3277.0
margin_right = 3392.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Penalties"

[node name="marking" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3396.0
margin_right = 3511.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Marking"

[node name="standing_tackle" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3515.0
margin_right = 3630.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Standing tackle"

[node name="sliding_tackle" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3634.0
margin_right = 3749.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Sliding tackle"

[node name="gk_diving" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3753.0
margin_right = 3868.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "GK Diving"

[node name="gk_handling" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3872.0
margin_right = 3987.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "GK Handling"

[node name="gk_kicking" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3991.0
margin_right = 4106.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "GK Kicking"

[node name="gk_positioning" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 4110.0
margin_right = 4225.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "GK Positioning"

[node name="gk_reflexes" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 4229.0
margin_right = 4344.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "GK Reflexes"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/ScrollContainer2/ListArea"]
margin_top = 34.0
margin_right = 4344.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="no_players" type="Label" parent="Panel/ScrollContainer2/ListArea/HBoxContainer2"]
visible = false
margin_top = 264.0
margin_right = 1280.0
margin_bottom = 297.0
rect_min_size = Vector2( 1280, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.423529, 0.258824, 0.643137, 1 )
text = "YOU DON'T HAVE ANY PLAYERS"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/ScrollContainer2/ListArea/HBoxContainer2"]
margin_right = 4344.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List_players" type="VBoxContainer" parent="Panel/ScrollContainer2/ListArea/HBoxContainer2/ScrollContainer"]
margin_right = 4344.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel"]
margin_top = 650.0
margin_right = 1280.0
margin_bottom = 703.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer3"]
margin_right = 45.0
margin_bottom = 58.0
rect_min_size = Vector2( 45, 20 )

[node name="col0" type="VBoxContainer" parent="Panel/HBoxContainer3"]
margin_left = 49.0
margin_right = 125.0
margin_bottom = 58.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer3/col0"]
margin_right = 76.0
margin_bottom = 14.0
text = "Sell"
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="Panel/HBoxContainer3/col0"]
margin_top = 18.0
margin_right = 76.0
margin_bottom = 58.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="col1" type="VBoxContainer" parent="Panel/HBoxContainer3"]
margin_left = 129.0
margin_right = 510.0
margin_bottom = 58.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer3/col1"]
margin_top = 19.0
margin_right = 381.0
margin_bottom = 39.0
alignment = 1

[node name="previous" type="Button" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 90.0
margin_right = 157.0
margin_bottom = 20.0
text = "Previous"

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 161.0
margin_right = 176.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )

[node name="start" type="Label" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 180.0
margin_top = 3.0
margin_right = 188.0
margin_bottom = 17.0
text = "0"

[node name="separator" type="Label" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 192.0
margin_top = 3.0
margin_right = 197.0
margin_bottom = 17.0
text = "/"

[node name="end" type="Label" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 201.0
margin_top = 3.0
margin_right = 225.0
margin_bottom = 17.0
text = "100"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 229.0
margin_right = 244.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )

[node name="next" type="Button" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 248.0
margin_right = 290.0
margin_bottom = 20.0
text = "Next"

[node name="col2" type="VBoxContainer" parent="Panel/HBoxContainer3"]
margin_left = 514.0
margin_right = 895.0
margin_bottom = 58.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer3/col2"]
margin_right = 381.0
margin_bottom = 53.0
alignment = 1

[node name="Back" type="Button" parent="Panel/HBoxContainer3/col2/HBoxContainer"]
margin_left = 84.0
margin_right = 200.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.188235, 0, 1 )
text = "BACK"

[node name="Buy" type="Button" parent="Panel/HBoxContainer3/col2/HBoxContainer"]
margin_left = 204.0
margin_right = 297.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "BUY"

[node name="Sell" type="Button" parent="Panel/HBoxContainer3/col2/HBoxContainer"]
visible = false
margin_left = 246.0
margin_right = 351.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.294118, 0.415686, 0.898039, 1 )
text = "SELL"

[node name="col3" type="VBoxContainer" parent="Panel/HBoxContainer3"]
margin_left = 899.0
margin_right = 1280.0
margin_bottom = 58.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer3/col3"]
margin_top = 22.0
margin_right = 381.0
margin_bottom = 36.0
alignment = 1

[node name="YourMoneylbl" type="Label" parent="Panel/HBoxContainer3/col3/HBoxContainer"]
margin_left = 138.0
margin_right = 222.0
margin_bottom = 14.0
text = "Your money :"

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer3/col3/HBoxContainer"]
margin_left = 226.0
margin_right = 231.0
margin_bottom = 14.0
rect_min_size = Vector2( 5, 0 )

[node name="YourMoneylbl2" type="Label" parent="Panel/HBoxContainer3/col3/HBoxContainer"]
margin_left = 235.0
margin_right = 243.0
margin_bottom = 14.0
text = "0"

[node name="HTTPRequest" type="HTTPRequest" parent="Panel"]

[node name="PanelBuy" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="toggled" from="Panel/HBoxContainer3/col0/CheckButton" to="Panel" method="_on_CheckButton_toggled"]
[connection signal="pressed" from="Panel/HBoxContainer3/col1/HBoxContainer/previous" to="Panel" method="_on_previous_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer3/col1/HBoxContainer/next" to="Panel" method="_on_next_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer3/col2/HBoxContainer/Back" to="Panel" method="_on_Back_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer3/col2/HBoxContainer/Buy" to="Panel" method="_on_Buy_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer3/col2/HBoxContainer/Sell" to="Panel" method="_on_Sell_pressed"]
[connection signal="request_completed" from="Panel/HTTPRequest" to="Panel" method="_on_HTTPRequest_request_completed"]
[connection signal="script_changed" from="PanelBuy" to="Panel" method="_on_PanelBuy_script_changed"]
[connection signal="visibility_changed" from="PanelBuy" to="Panel" method="_on_PanelBuy_visibility_changed"]
[connection signal="fade_finished" from="FadeIn" to="Panel" method="_on_FadeIn_fade_finished"]
